<resources>
    <string name="app_name">Zlatna Rezervacija</string>
    <string name="login">Prijava</string>
    <string name="registration">Registracija</string>
    <string name="btn_registration">Registriraj se</string>
    <string name="signIn">Prijavite se</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Lozinka</string>
    <string name="noAccount">Nemate račun? Registrirajte se!</string>
    <string name="open">Otvori</string>
    <string name="close">Zatvori</string>
    <string name="cjenik">Cjenik</string>
    <string name="rezervacija">Rezervacija</string>
    <string name="moje_rezervacije">Moje rezervacije</string>
    <string name="detalji">Detalji</string>
    <string name="lokacija">Lokacija</string>
    <string name="o_nama">O nama</string>
    <string name="odjava">Odjava</string>
    <string name="rezervacije_restorana">Rezervacije restorana</string>
    <string name="rezervacije_na_cekanju">Rezervacije na čekanju</string>
    <string name="logout_alert_title">Odjava</string>
    <string name="logout_alert_message">Jeste li sigurni da se želite odjaviti iz aplikacije?</string>
    <string name="Alert_positive_button">U redu</string>
    <string name="Alert_cancel_button">Poništi</string>
    <string name="Exit_alert_title">Izlaz</string>
    <string name="Exit_alert_message">Jeste li sigurni da želite izaći iz aplikacije?</string>
    <string name="repasswordHint">Ponovljena lozinka</string>
    <string name="name_registration">Ime</string>
    <string name="surname_registration">Prezime</string>
    <string name="cellphone_registration">Kontaktni broj</string>
    <string name="NoInternet">Nema internet konekcije</string>
    <string name="PassError">Unesite lozinku</string>
    <string name="EmailError">Unesite email</string>
    <string name="EmailError2">Unesite pravilan email</string>
    <string name="LoginFailed">Neuspješna prijava u sustav</string>
    <string name="RegistrationFailedTitle">Neuspješna registracija</string>
    <string name="RegistrationFaildMessage">Email koji ste unijeli se več koristi u aplikaciji</string>
    <string name="RegistrationSuccess">Uspješna registracija u sustav</string>
    <string name="FirstNameError">Unesite ime</string>
    <string name="LastNameError">Unesite prezime</string>
    <string name="PhoneError">Unesite kontaktni broj</string>
    <string name="SecondPassError">Unesite ponovljenu lozinku</string>
    <string name="EqualsPassError">Unesite jednake lozinke</string>
    <string name="LoginInProgres">Prijava u tijeku</string>
    <string name="PleaseWait">Molimo pričekajte</string>
    <string name="MapLoading">Učitavanje mape</string>
    <string name="RegistrationInProgress">Registracija u tijeku</string>
    <string name="LogoutToastText">Uspješna odjava iz sustava</string>
    <string name="AppName_AppVersion">Zlatna Rezervacija - Verzija 1.2</string>
    <string name="AppDevelopers">Izrada: Lovro Jakopović, Matija Sabolić, Marko Srnec</string>
    <string name="menu_category">Cjenik</string>
    <string name="FetchingData">Dohvaćanje podataka</string>
    <string name="NoDescription">Nema opisa</string>
    <string name="Kuna">" Kn"</string>
    <string name="ReservationTitle">Rezervacija</string>
    <string name="persons">Broj osoba</string>
    <string name="number_of_meals">Broj jela</string>
    <string name="datum">Datum</string>
    <string name="vrijeme">Vrijeme</string>
    <string name="remark">Napomene</string>
    <string name="Reserve">Rezerviraj</string>
    <string name="Legend">Legenda</string>
    <string name="onWait">Na čekanju</string>
    <string name="Confirmed">Potvrđena</string>
    <string name="Rejected">Odbijena</string>
    <string name="Request">Zahtjev za otkazivanjem</string>
    <string name="Canceled">Otkazana</string>
    <string name="postavke">Postavke</string>
    <string name="option1">Vibracija</string>
    <string name="option2">Notifikacija</string>
    <string name="textMainOption">Obavijesti</string>
    <string name="textOption">Način primanja obavijesti</string>
    <string name="settingsSucces">Način primanja obavijesti je promijenjen</string>
    <string name="settingsUnsucces">Način primanja obavijesti je ostao isti</string>
    <string name="reason_for_cancel">Razlog za otkazivanje</string>
    <string name="Alert_cancel_button_for_reservation">Cancel</string>
    <string name="Alert_cancel_title">Otkazivanje rezervacija</string>
    <string name="GetAllReservationsInProcess">Dohvaćanje rezervacija u tijeku</string>
    <string name="CancelOfReservationInProcess">Otkazivanje rezervacije u tijeku</string>
    <string name="ToastCancelOfReservation">Niste odabrali koju rezervaciju želite otkazati.</string>
    <string name="BackAlertTitle">Povratak</string>
    <string name="BackAlertMessage">Jeste li sigurni da se želite vratiti? Promjene koje ste napravili neće biti spremljene.</string>
    <string name="PersonsError">Unesite broj osoba</string>
    <string name="PersonsError2">Broj osoba mora biti minimalno 1</string>
    <string name="MealsError">Unesite broj jela</string>
    <string name="MealsError2">Broj jela mora biti minimalno 1</string>
    <string name="DateError">Unesite datum</string>
    <string name="TimeError">Unesite vrijeme</string>
    <string name="EmptyRemark">Nema napomena</string>
    <string name="Vibration">Vibracija</string>
    <string name="Notification">Notifikacija</string>
    <string name="SendReservationInProgress">Slanje rezervacije u tijeku</string>
    <string name="SuccessCreatingReservation">Vaša rezervacija je uspješno kreirana</string>
    <string name="ErrorCreatingReservation">Slanje rezervacije nije uspjelo, pokušajte ponovo...</string>
    <string name="UnsuccessCancelReservation">Otkazivanje rezervacije nije uspjelo, pokušajte ponovo...</string>
    <string name="EmptyListReservationForCancel">Trenutno nemate niti jednu rezervaciju koju možete otkazati</string>
    <string name="CreateReservationMessage">Molimo Vas da provjerite unesene podatke prije slanja. Slanje rezervacije sa ovim podacima?</string>
    <string name="UserName">Ime i prezime:</string>
    <string name="StringForChange">text</string>
    <string name="ReservationCreateAlertDate">Datum:</string>
    <string name="ReservationCreateAlertTime">Vrijeme:</string>
    <string name="ReservationCreateAlertPersons">Broj osoba:</string>
    <string name="ReservationCreateAlertMeals">Broj jela:</string>
    <string name="ReservationCreateAlertRemark">Napomene:</string>
    <string name="ReservationCreateAlertNotification">Obavijesti: *</string>
    <string name="ChangeNotificationMessage">* Za promjenu načina primanja obavijesti posjetite postavke aplikacije</string>
    <string name="UserReservationsDate">Datum:</string>
    <string name="UserReservationsTimeStart">Vrijeme dolaska:</string>
    <string name="UserReservationsTimeCheckout">Vrijeme kraja:</string>
    <string name="UserReservationsPersons">Broj osoba:</string>
    <string name="UserReservationsMeals">Broj jela:</string>
    <string name="UserReservationsTables">Stolovi:</string>
    <string name="UserReservationsRemark">Napomene:</string>
    <string name="UserReservationsDescription">Opis:</string>
    <string name="RestaurantAdressTitle">Adresa restorana</string>
    <string name="RestaurantAdress1">Banjščina 104</string>
    <string name="RestaurantAdress2">Varaždin Breg, 42204 Turčin</string>
    <string name="RestaurantContactTitle">Kontakt</string>
    <string name="RestaurantContactPhone">042 666 054</string>
    <string name="RestaurantContactEmail">zlatni-restorani@net.hr</string>
    <string name="RestaurantWebTitle">Web stranice</string>
    <string name="RestaurantContactWeb">www.zlatne-gorice.eu</string>
    <string name="RestaurantPaying">Načini plačanja</string>
    <string name="RestaurantWorkingTitle">Radno vrijeme</string>
    <string name="RestaurantWorking1">Pon: ZATVORENO</string>
    <string name="RestaurantWorking2">Uto - Čet: 12:00 - 22:00</string>
    <string name="RestaurantWorking3">Pet - Sub: 12:00 - 23:00</string>
    <string name="RestaurantWorking4">Ned: 12:00 - 20:00</string>
    <string name="RestaurantReservationsTitle">Rezervacije restorana</string>
    <string name="razlog_odbijanja">Razlog odbijanja</string>
    <string name="FailedNotification">Slanje obavijesti nije uspjelo</string>
    <string name="Location">Gdje se nalazimo?</string>
    <string name="LocationText">Izletište Zlatne gorice osim što je smješteno na prekrasnom imanju okruženom vinogradima nudi kompletnu gastronomsku idilu zbog koje se svaki gost koji je jedanput iskusio čari Zlatnih gorica rado vraća na provjereno mjesto. \n\nLjepota prirode, čisti zrak i prekrasan pogled na Varaždin su jedan od razloga zašto gosti Zlatne gorice prepoznaju kao mjesto gdje njihovo vrijeme vrijedi puno više. Samo par minuta vožnje od Varaždina i već su se odmaknuli od ubrzane zbilje, gustog prometa i svakodnevnih briga.</string>
    <string name="Environment">Gdje se nalazimo?</string>
    <string name="EnvironmentText">U četiri salona, u kojima se osjećate kao da ste u nekom drugom vremenu, uživajte u zavičajnim jelima varaždinskog kraja. Uz domaći kuruzni kruh, meso na brajdama, puricu z mlincima, pohane žablje tacice i kajkakva dnevna iznenađenja sjetit ćete se kako su to nekad kuhale naše bake.\n\nUz vilu je i sanjkalište, uz vinograd vinski put, obiteljski zabavni park, a podrum  otkriva sve ljepote uživanja u domaćem vinu. Pogledom na sve strane svijeta s terase pratite kako život oko vas juri, a vi ste vrijeme zaustavili u tradiciji i kvaliteti… \n\nVILA DONATA s 4 odvojena salona i staklenom panoramskom terasom ima mogućnost smještaja 120 gostiju, što nudi mogućnost istovremenog održavanja više različitih događaja (svečanosti, prezentacije).\n\nVRTNA TERASA: od 20. travnja do 15. rujna (ovisno o vremenskim prilikama) nudi mogućnost smještaja 130 gostiju ili organizaciju hladno-toplog buffeta do 250 gostiju!</string>
    <string name="Offer">Što sve nudimo?</string>
    <string name="OfferText">Svakodnevno za vas pripremamo bogatu ponudu jela, osim nadaleko poznatog ljubaznog osoblja. Kompletnu ponudu raznovrsnih jela i pića možete pronaći u aplikaciji pod opcijom cjenik.</string>
    <string name="AdminReservationTitle">"Rezervacija "</string>
    <string name="RequestForCancelNotificationFirstPart">"Zahtjev za otkazivanjem rezervacije "</string>
    <string name="RequestForCancelNotificationSecondPartSuccess">" je prihvaćen."</string>
    <string name="RequestForCancelNotificationSecondPartCancel">" je odbijen."</string>
    <string name="RequestForCancelDatabaseFail">Odgovor na zahtjev nije izvršen, pokušajte ponovo...</string>
    <string name="RefuseRequestForCancelAlertTitle">Odbijanje zahtjeva</string>
    <string name="SendingNotificationMessage">Šaljem obavijest</string>
    <string name="NotificationFailMessage">Korisnik nije obaviješten!</string>
    <string name="NotificationSuccessMessage">Korisnik je uspješno obavješten!</string>
    <string name="NoFreeTables">Nema slobodnih stolova</string>
    <string name="RefuseReservationAlertTitle">Odbijanje rezervacije</string>
    <string name="InsertEndTimeError">Unestie vrijeme kraja!</string>
    <string name="InsertTableError">Nije odabran niti jedan stol. Molimo Vas da odaberete stol za rezervaciju!</string>
    <string name="ReservationsOnHoldActivityTitle">Rezervacije na čekanju</string>
    <string name="NotificationMessageFirstpart">", rezervacija "</string>
    <string name="NotificationMessageSecondPartSuccess">" je prihvaćena."</string>
    <string name="NotificationMessageSecondPartCancel">" je odbijena."</string>
    <string name="atmosphere">Ugodan ambijent</string>
    <string name="ReservationNumber">Broj rezervacije:</string>
    <string name="Time">Vrijeme:</string>
</resources>