<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foi.air.zlatnarezervacija.SettingsActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textViewOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOption"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <RadioButton android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:textColor="@color/btnColor"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            android:textColor="@color/btnColor"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>
</RelativeLayout>
