<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.example.matija.zlatnarezervacija.MainActivity"
    android:background="@color/colorBackground"
    android:id="@+id/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
       >

        <ImageView android:src="@drawable/zlatna_rezervacija"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="1dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/emailtextlayout"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint"
                android:textColor="@color/btnColor" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/passtextlayout"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"
                android:textColor="@color/btnColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:theme="@style/Button"/>

        <TextView android:id="@+id/link_registration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/noAccount"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>
